package com;

option java_package = "com.zy17.protobuf.domain";

option java_outer_classname = "Eng";
//option java_generic_services = true;

message Card {
    //    required string id = 2;
    required string engText = 1;
    optional string chiText = 3;
    optional PbImage image = 5;
    optional PbSound sound = 7;
}

message CardList {
    repeated Card card = 1;
}

message BlobMessage {
    //    上传blob的url
    required string blobUploadUrl = 1;
}

//多媒体类型
message MediaBlobInfo {
    required string blobkey = 1;
    required string oldFileName = 2;
    required string fileName = 3;
    required string contentType = 5;
    required int64 fileSize = 7;
    required int64 createDate = 9;
    optional string servUrl = 11;
}

message MediaBlobInfoList {
    repeated MediaBlobInfo mediaBlobInfos = 1;
}
//图片 继承多媒体类型
message PbImage {
    required MediaBlobInfo mediaInfo = 1;
}
//声音 继承多媒体类型
message PbSound {
    required MediaBlobInfo mediaInfo = 1;
}

message PbImageList {
    repeated PbImage image = 1;
}






//系统内部用户信息
message User {
    //    全局唯一用户标示
    required string email = 1;
    optional string password = 3;
    optional string nickname = 5;
    optional string gender = 7;
    optional int32 role = 8;
//    repeated ThirdPartUser user = 9;
    optional string phonenum=11;
    optional string sinaOpenid=21;
    optional string qqOpenid=22;
    optional string weixinOpenid=23;
}

message ThirdPartUser {
    required string openId = 1;
    optional string accessToken = 3;
    optional int32 remindIn = 5;
    optional int32 expiresIn = 7;
    required PlatformType platformType = 9;
}

message UserList {
    repeated User users = 1;
}

enum PlatformType{
    SINA = 1;
    QQ=2;
    WEIXIN=3;
}
